unpackaged/config/ready/Payment2us/objects/rio_ed__Student_Fee__c.object
<CustomObject>
    <fields>
        <fullName>redu_PaymentFormId__c</fullName>
        <formula>CASESAFEID($Setup.rio_ed__RIO_Education_Settings__c.redu_Payment_Form_ID__c)</formula>
        <label>PaymentFormId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Payment_For__c</fullName>
        <formula>&quot;Fee for &quot;+ rio_ed__Program_Enrollment__r.redu_Program_Name__c +&quot; - &quot;+rio_ed__Student_Fee_Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_PrepaymentMsg__c</fullName>
        <formula>$Label.redu_PaymentHandler_Redirect_Message</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrepaymentMsg</label>
        <type>Text</type>
    </fields>
</CustomObject>